--- a/src/app/common/layouts/main-layout/main-layout.component.html
+++ b/src/app/common/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 <div class="content">
+    <section>
+        <div class="container">
+            <app-meal-item></app-meal-item>
+        </div>
+    </section>
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
