--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -9,6 +9,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+    // font-family: 'Lato', sans-serif;
+    font-family: "Open Sans", sans-serif;
+}
+
 h1,
 h2,
 h3,
