--- a/src/app/common/layouts/header/header.component.scss
+++ b/src/app/common/layouts/header/header.component.scss
@@ -4,8 +4,80 @@ header {
     padding: 15px;
     background-color: #e2e2e2;
     min-height: 70px;
+    position: relative;
 }
 
 .logo {
     font-size: 40px;
+}
+
+.menu {
+    display: block;
+    border: 0;
+    background-color: transparent;
+    position: relative;
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    margin-right: 10px;
+    span {
+        position: absolute;
+        top: 50%;
+        margin-top: -1px;
+        left: 50%;
+        margin-left: -10px;
+        width: 20px;
+        height: 2px;
+        background-color: #000;
+        &:before,
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 50%;
+            margin-top: -1px;
+            left: 50%;
+            margin-left: -10px;
+            width: 20px;
+            height: 2px;
+            background-color: #000;
+            transition: 0.5s;
+        }
+        &:before {
+            transform: translateY(-5px);
+        }
+        &:after {
+            transform: translateY(5px);
+        }
+    }
+}
+
+.toggle-menu {
+    position: absolute;
+    top: calc(100% + 8px);
+    right: 15px;
+    z-index: 2;
+    .menu-container {
+        background-color: #fff;
+        border-radius: 5px;
+        width: 100%;
+        height: 100%;
+        display: block;
+        box-shadow: 1px 3px 4px #1233;
+        min-width: 150px;
+        overflow: hidden;
+    }
+    .menu-link {
+        position: relative;
+        padding: 15px 20px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        &:hover {
+            background-color: #eee;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
+    }
 }
