--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -69,3 +69,13 @@ section {
     width: 100%;
     padding: 0 15px;
 }
+
+// class-helpers
+
+.d-flex {
+    display: flex;
+    gap: 15px;
+    &.wrap {
+        flex-wrap: wrap;
+    }
+}
