--- a/src/app/common/layouts/meal-item/meal-item.component.scss
+++ b/src/app/common/layouts/meal-item/meal-item.component.scss
@@ -23,6 +23,8 @@
             height: 100%;
             width: 100%;
             position: relative;
+            border: 1px solid #e6e6e6;
+            border-radius: 15px;
         }
     }
 
@@ -99,7 +101,7 @@
     }
     &__title {
         font-family: "Enriqueta", serif;
-        font-size: 1.2em;
+        font-size: 1em;
         h1 {
             font-size: 2em;
             margin: 0.67em 0;
@@ -108,16 +110,18 @@
     &__description {
         font-size: 1.1em;
         line-height: 1.3;
+        max-height: 100px;
+        overflow: hidden;
         p {
             margin: 1em 0;
         }
     }
     &__content-container {
-        width: 300px;
+        width: 0px;
         height: 450px;
         margin-top: 25px;
         background: #f5f5f5;
-        position: absolute;
+        // position: absolute;
         box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02), 0 6.7px 5.3px rgba(0, 0, 0, 0.028),
             0 12.5px 10px rgba(0, 0, 0, 0.035), 0 22.3px 17.9px rgba(0, 0, 0, 0.042),
             0 41.8px 33.4px rgba(0, 0, 0, 0.05), 0 100px 80px rgba(0, 0, 0, 0.07);
@@ -128,7 +132,7 @@
     &__content-container--open {
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
-        transform: translateX(60%);
+        transform: translateX(0%);
         width: 500px;
     }
     &__actions {
